// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@coveo/create-atomic-component when called in an existing project should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "ewQGf3/bnIIj+Rv249cv7K7YGsg=",
                      "name": "stencil-docs.d.ts",
                    },
                    HashedFile {
                      "hash": "xOB9ZNJ++yBV8T/VCR5JsDQJeu0=",
                      "name": "stencil-docs.json",
                    },
                  ],
                  "hash": "NpCl/0TkqEz5KvSxHCSyvwrI5LA=",
                  "name": "docs",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "cdn.js",
                    },
                    HashedFile {
                      "hash": "/5yLi44o1uyQViLBqN4GTX4Wifo=",
                      "name": "index.cjs.js",
                    },
                    HashedFile {
                      "hash": "BHkYREiqjkQizanFWrHUH+O5/HI=",
                      "name": "index.d.ts",
                    },
                    HashedFile {
                      "hash": "AVg2xEIhlYFa1JdLuHECP4RcRwg=",
                      "name": "index.es2017.js",
                    },
                    HashedFile {
                      "hash": "orpFM4J34T2gX7c3vGiovp0rdxM=",
                      "name": "index.js",
                    },
                    HashedFile {
                      "hash": "WNqwx6y7/TKh0xE/ENZlA00Dy/g=",
                      "name": "package.json",
                    },
                  ],
                  "hash": "sWhaIzdNtSJjLJC7gUXMjbEJdx0=",
                  "name": "loader",
                },
                HashedFile {
                  "hash": "kXAHDQ1O9ekXzA/BXFhyae6Af6Y=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "qJnWpbM0djxX/iTkEr7sFyWoEKE=",
                      "name": "components.d.ts",
                    },
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "oh-wow-another-component-can-you-believe-it.css",
                    },
                    HashedFile {
                      "hash": "cyiSAzblslLaM9FtFOxZflhDW5E=",
                      "name": "oh-wow-another-component-can-you-believe-it.tsx",
                    },
                    HashedFile {
                      "hash": "0paD+lp3fCIv4J/d+YrJ6gkGSbo=",
                      "name": "readme.md",
                    },
                  ],
                  "hash": "celgq3+aR0rWl5L3cCnvB/wg6ls=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "y1zUoP8IAlkJdLuxx+7qnJtO60Q=",
              "name": "oh-wow-another-component-can-you-believe-it",
            },
          ],
          "hash": "iMrWj+3KsiToTsfTyOfYi6vAEGI=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "aWmQvAfSQQ2UbjT6AXK9zSl8Rx8=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "ecwhTRDyXpCuuBOcjXHG5zS6hUk=",
  "name": "no-args",
}
`;

exports[`@coveo/create-atomic-component when called with a component name without hyphen should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "b6IE637UMamVYBKTsToO/IJ+E1U=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "atomic-nohypen.css",
                    },
                    HashedFile {
                      "hash": "tS25lkQb7dlQXKxuykh6R0/CIPo=",
                      "name": "atomic-nohypen.tsx",
                    },
                  ],
                  "hash": "Zd4hjEzrsZbYZVpDMlMpAGTqMoI=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "DWHIfKQCNKasSSZ97YVubh90ZRI=",
              "name": "atomic-nohypen",
            },
          ],
          "hash": "jpfZpPR3Yai9h5AJEcYqqKmED7g=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "0peHaJmWzhEZ+yxLUw1js/hDApc=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "JXLIV4YofqGuyDaymRr71JbVTJU=",
  "name": "invalid-arg",
}
`;

exports[`@coveo/create-atomic-component when called with a valid component name should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "ivMYowyXrV/mAYnSe8vDk1/hDE8=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "valid-component-name.css",
                    },
                    HashedFile {
                      "hash": "YZICfNAhO7c4mopg1lRMvtn4zoc=",
                      "name": "valid-component-name.tsx",
                    },
                  ],
                  "hash": "GPCobV/2HmZJ0cpyuZQf9TQeVf8=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "M5Xyehtbybq2wMFyon1gayX0AS4=",
              "name": "valid-component-name",
            },
          ],
          "hash": "2Eim2LnX9m5/BonHzfbCO3K+iPM=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "aB+RuhgGKUTZSE9ejK7wH1zJ4S0=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "ft2R83OHmfMYqke37eFk6wOsW1E=",
  "name": "valid-arg",
}
`;

exports[`@coveo/create-atomic-component when called without any args should initialize a base project and a component 1`] = `
HashedFolder {
  "children": [
    HashedFile {
      "hash": "T+7uUFOwtxWi7kfgvgjJd2t2pXM=",
      "name": "package.json",
    },
    HashedFile {
      "hash": "GTHDDg2nmK65HaBZtDE0JI6kg10=",
      "name": "readme.md",
    },
    HashedFolder {
      "children": [
        HashedFolder {
          "children": [
            HashedFolder {
              "children": [
                HashedFile {
                  "hash": "6xt1KezZg2qEkMmLcB7eTwx/yJI=",
                  "name": "package.json",
                },
                HashedFolder {
                  "children": [
                    HashedFile {
                      "hash": "XemX7AoOihA4SgQsvWtcStjeiGo=",
                      "name": "sample-component.css",
                    },
                    HashedFile {
                      "hash": "5oFqFve0WaOV3g/ptfVo98a5B4Q=",
                      "name": "sample-component.tsx",
                    },
                  ],
                  "hash": "65UuO8iiPnNRHZur5KT+HoQqFCw=",
                  "name": "src",
                },
                HashedFile {
                  "hash": "P9m+RAnkIDPWV+z+JIDRSo8UgDA=",
                  "name": "stencil.config.ts",
                },
                HashedFile {
                  "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
                  "name": "tsconfig.json",
                },
              ],
              "hash": "bSEAV7VmcK5UW9p29gTRDx+IcKQ=",
              "name": "sample-component",
            },
          ],
          "hash": "Jz26rCH7BVUoJWKboMdvAq7+XV8=",
          "name": "components",
        },
        HashedFile {
          "hash": "YVuwXfIZfjfeVyLQ6cMy3kUqC3A=",
          "name": "html.d.ts",
        },
        HashedFolder {
          "children": [
            HashedFile {
              "hash": "L08E7dMK5e0wD5P8meKHfkDDa3o=",
              "name": "index.css",
            },
            HashedFile {
              "hash": "2XR/MKCv0fo3uRpZRiTyOBoHk7s=",
              "name": "index.html",
            },
            HashedFile {
              "hash": "ZRD3OAMjlKnlu7Yh3iQv3gCcG8c=",
              "name": "index.ts",
            },
          ],
          "hash": "V7y/8CwkVmHHCoFc1OqeZ9uA7Uo=",
          "name": "pages",
        },
      ],
      "hash": "bKcQCVva+5nV8vP8aKmQeWeZoXI=",
      "name": "src",
    },
    HashedFile {
      "hash": "BVZfiCzL+2kulE12K4HLAIl3kJ8=",
      "name": "stencil.config.ts",
    },
    HashedFile {
      "hash": "yMxJnSeOFw52ObOJrKQEh86v+HM=",
      "name": "tsconfig.json",
    },
  ],
  "hash": "hkhIH6rHcjW69GV4DURKpLs+UzA=",
  "name": "no-args",
}
`;
